--- a/estilos.css
+++ b/estilos.css
@@ -1,17 +1,6 @@
-.classe1{
-    width: 100vw;
-    height: 100vh;
-    background: #6C7A89;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.classe2 {
-    width: 300px;
-    height: 300px;
-    background: #fff;
-}
-body {
-    margin: 0px;
+/*reset*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
